<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.stgo.bildform.Fragment.SettingsFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/settings_title"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textImputLayoutIpSettings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                app:hintAnimationEnabled="true"
                app:hintTextAppearance="@style/TextLabel">

                <EditText
                    android:id="@+id/settingIp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/settings_ip"
                    android:inputType="number"
                    android:digits="0123456789."
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textImputLayoutPortSettings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                app:hintAnimationEnabled="true"
                app:hintTextAppearance="@style/TextLabel">

                <EditText
                    android:id="@+id/settingPort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/settings_port"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/buttonSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/settings_button" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
